services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-v0-1-0
  name: app-v0-1-0
  namespace: abc-qa
spec:
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 9002
  selector:
    app: app-v0-1-0
  type: ClusterIP
