ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "cluster-vault-issuer"
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: app.k8s.abc.com
      http:
        paths:
          - path: /app
            backend:
              serviceName: app
              servicePort: 8080
  tls:
    - secretName: app-production-tls
      hosts:
        -   app.k8s.abc.com
        
        
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abc
  namespace: abc-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    cert-manager.io/acme-challenge-type: "http01"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "false" # should be false if modsecurity-snippet present
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyAccess On
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABIJDEFHZ
      SecAuditLog /var/log/modsec_audit.log
      Include /etc/nginx/owasp-modsecurity-crs/nginx-modsecurity.conf
      # Include /etc/nginx/modsecurity/modsecurity.conf
spec:
  tls:
  - hosts:
    - abc.dev.xyz.com
    secretName: abc-dev-tls
  rules:
  - host: abc.dev.xyz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: abc-frontend-v0-1-0
            port:
              number: 9002
