ingress1.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "cluster-vault-issuer"
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: app.k8s.shd.abc.com
      http:
        paths:
          - path: /app
            backend:
              serviceName: app
              servicePort: 8080
  tls:
    - secretName: app-production-tls
      hosts:
        -   app.k8s.shd.abc.com
